Intento-de-boostrap

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     </div>
 </div>
 
-    <div class="row mt-5">
-        <div class="col-4">
+    <div class="row mt-5 pt-5" style="margin: 10rem;">
+        <div class="col-12 col-md-4">
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
@@ -126,7 +126,7 @@
                 </div>
               </div>
         </div>
-        <div class="col-4">
+        <div class="col-12 col-md-4">
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
@@ -142,7 +142,7 @@
                 </div>
               </div>
         </div>
-        <div class="col-4">
+        <div class="col-12 col-md-4">
             <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-4">
@@ -158,12 +158,13 @@
             </div>
           </div></div>
     </div>
-<div class="row">
-    <div class="col-9">
+<div class="row" style="margin: 10rem;">
+    <div class="col-md-8">
         <h2 class="">TENEMOS DONAS PERSONALIZADAS</h2>
         <p class="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa iste saepe alias repellat? Id, iusto, porro dignissimos laboriosam exercitationem velit optio provident ullam eveniet maiores et corrupti repellendus non magni?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, eligendi temporibus beatae unde perspiciatis atque similique quisquam recusandae repellat voluptates, illum vel magnam. Natus quos eaque perspiciatis eveniet delectus provident?</p>
     </div>
-    <div class="col-3">
+    <div class="col-md-4">
         <img src="./media/donas-con-matcha.jpg" class="img-fluid" alt="">
     </div>
 </div>
